# DSC180-Q1

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
docs/: CODING_GUIDE.md  GPS-SETUP.md  GRAPH-TOKEN-SETUP.md  PROJECT_ARCHITECTURE.md  README.md  Research_Goals.md
experiments/runs/: autograph_synthetic_paths.yaml  gps_synthetic_cycles.yaml  sequence_synthetic_cycles.yaml
results/: COMPREHENSIVE_RESULTS.md  CYCLE_DETECTION_RESULTS.md  DATASET_STATISTICS.md  RESULTS_SUMMARY.md  SHORTEST_PATH_RESULTS.md  dataset_statistics.json  generalization_comparison.csv  tokenization_comparison.json  training_logs_comparison.csv
results/figures_backup/: results_comparison.csv
scripts/: aggregate_results.py  analyze_dataset_stats.py  compare_tokenizations.py  create_results_visualizations.py  create_step_curves.py  create_train_val_test_splits.py  create_training_curves.py  evaluate_autograph_splits.py  evaluate_gps_splits.py  evaluate_graphtoken_splits.py  evaluate_with_splits.py  generate_large_dataset.py  generate_synthetic_data.py  organize_datasets.py  plot_results.py  retroactive_logging.py  run_all_generalization_tests.sh  run_all_models_generalization.sh  run_all_transformers_generalization.sh  run_experiment.py  run_sequence_models.sh  train_autograph_cycle.py  train_autograph_cycle_full.py  train_gps_cycle.py  train_gps_shortest_path.py  train_graph_token_cycle.py  train_graph_token_cycle_full.py  train_mpnn_cycle.py  train_mpnn_shortest_path.py
src/: __init__.py
week1/: visualizing_datasets.ipynb
week2/: gcn_cora.ipynb
week3/: gat_cora.ipynb
(+93 files in other folders)
