[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.1.1",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "notebook>=7.4.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
